--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.lansheng228</groupId>
   <artifactId>spring-cloud-consul</artifactId>
-  <version>2.1.2.SNAPSHOT</version>
+  <version>2.2.1.RELEASE</version>
   <packaging>pom</packaging>
   <name>spring-cloud-consul</name>
   <description>spring cloud consul enhancements</description>
@@ -64,7 +64,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <java.version>1.8</java.version>
 
-    <spring-cloud-consul.version>2.1.2.RELEASE</spring-cloud-consul.version>
+    <spring-cloud-consul.version>2.2.1.RELEASE</spring-cloud-consul.version>
     <commons-lang3.version>3.9</commons-lang3.version>
     <guava.version>28.2-jre</guava.version>
     <lombok.version>1.18.12</lombok.version>
@@ -80,6 +80,8 @@
     <slf4j.version>1.7.30</slf4j.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
+    <consul-api.version>1.4.4</consul-api.version>
+    <ribbon.version>2.7.17</ribbon.version>
 
     <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -103,6 +105,69 @@
         <version>${spring-cloud-consul.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-commons</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-consul-core</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-context</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-consul-discovery</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-consul-config</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-netflix-ribbon</artifactId>
+        <version>${spring-cloud-consul.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>com.ecwid.consul</groupId>
+        <artifactId>consul-api</artifactId>
+        <version>${consul-api.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>com.netflix.ribbon</groupId>
+        <artifactId>ribbon-core</artifactId>
+        <version>${ribbon.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>com.netflix.ribbon</groupId>
+        <artifactId>ribbon-loadbalancer</artifactId>
+        <version>${ribbon.version}</version>
+        <optional>true</optional>
       </dependency>
 
       <dependency>
@@ -248,6 +313,7 @@
               <serverId>sonatype-nexus-staging</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
+              <autoDropAfterRelease>true</autoDropAfterRelease>
             </configuration>
           </plugin>
           <plugin>
@@ -439,6 +505,7 @@
           <serverId>sonatype-nexus-staging</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
+          <autoDropAfterRelease>true</autoDropAfterRelease>
         </configuration>
       </plugin>
 
