--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,11 @@
     <java.version>1.8</java.version>
 
     <spring-cloud-consul.version>2.2.1.RELEASE</spring-cloud-consul.version>
+    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <spring-retry.version>1.2.5.RELEASE</spring-retry.version>
     <commons-lang3.version>3.9</commons-lang3.version>
     <guava.version>28.2-jre</guava.version>
+    <gson.version>2.8.6</gson.version>
     <lombok.version>1.18.12</lombok.version>
     <commons-io.version>2.6</commons-io.version>
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -101,72 +104,36 @@
     <dependencies>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-consul</artifactId>
-        <version>${spring-cloud-consul.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-commons</artifactId>
+        <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         <version>${spring-cloud-consul.version}</version>
         <optional>true</optional>
       </dependency>
 
       <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-consul-core</artifactId>
+        <artifactId>spring-cloud-starter-consul-config</artifactId>
         <version>${spring-cloud-consul.version}</version>
         <optional>true</optional>
       </dependency>
 
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-context</artifactId>
-        <version>${spring-cloud-consul.version}</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-autoconfigure</artifactId>
+        <version>${spring-boot.version}</version>
         <optional>true</optional>
       </dependency>
 
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-consul-discovery</artifactId>
-        <version>${spring-cloud-consul.version}</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-logging</artifactId>
+        <version>${spring-boot.version}</version>
         <optional>true</optional>
       </dependency>
 
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-consul-config</artifactId>
-        <version>${spring-cloud-consul.version}</version>
-        <optional>true</optional>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-netflix-ribbon</artifactId>
-        <version>${spring-cloud-consul.version}</version>
-        <optional>true</optional>
-      </dependency>
-
-      <dependency>
-        <groupId>com.ecwid.consul</groupId>
-        <artifactId>consul-api</artifactId>
-        <version>${consul-api.version}</version>
-        <optional>true</optional>
-      </dependency>
-
-      <dependency>
-        <groupId>com.netflix.ribbon</groupId>
-        <artifactId>ribbon-core</artifactId>
-        <version>${ribbon.version}</version>
-        <optional>true</optional>
-      </dependency>
-
-      <dependency>
-        <groupId>com.netflix.ribbon</groupId>
-        <artifactId>ribbon-loadbalancer</artifactId>
-        <version>${ribbon.version}</version>
+        <groupId>org.springframework.retry</groupId>
+        <artifactId>spring-retry</artifactId>
+        <version>${spring-retry.version}</version>
         <optional>true</optional>
       </dependency>
 
@@ -178,9 +145,9 @@
       </dependency>
 
       <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>${fastjson.version}</version>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>${gson.version}</version>
         <optional>true</optional>
       </dependency>
 
@@ -213,13 +180,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-        <optional>true</optional>
-      </dependency>
-
-      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-compress</artifactId>
         <version>${commons-compress.version}</version>
@@ -227,9 +187,9 @@
       </dependency>
 
       <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>javax.annotation-api</artifactId>
-        <version>${javax.annotation-api.version}</version>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
         <optional>true</optional>
       </dependency>
 
@@ -238,13 +198,6 @@
         <artifactId>validation-api</artifactId>
         <version>${javax.validation-api.version}</version>
         <optional>true</optional>
-      </dependency>
-
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>${junit.jupiter.version}</version>
-        <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -269,6 +222,27 @@
       </dependency>
 
       <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
         <groupId>org.awaitility</groupId>
         <artifactId>awaitility</artifactId>
         <version>${awaitility.version}</version>
@@ -279,6 +253,13 @@
         <groupId>org.awaitility</groupId>
         <artifactId>awaitility-proxy</artifactId>
         <version>${awaitility-proxy.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>${spring-boot.version}</version>
         <scope>test</scope>
       </dependency>
 
@@ -389,6 +370,11 @@
     </pluginManagement>
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
