增加一个包

--- a/spring-cloud-consul-cluster/pom.xml
+++ b/spring-cloud-consul-cluster/pom.xml
@@ -63,6 +63,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <optional>true</optional>
