--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
     <spring-retry.version>1.2.5.RELEASE</spring-retry.version>
     <commons-lang3.version>3.9</commons-lang3.version>
+    <commons-collections4.version>4.4</commons-collections4.version>
     <guava.version>28.2-jre</guava.version>
     <gson.version>2.8.6</gson.version>
     <lombok.version>1.18.12</lombok.version>
@@ -162,6 +163,13 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${commons-lang3.version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>${commons-collections4.version}</version>
         <optional>true</optional>
       </dependency>
 
